--- a/allcss/contact.css
+++ b/allcss/contact.css
@@ -113,10 +113,14 @@
   list-style: none;
 }
 .nav-menu ul li a {
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 600;
   color: #ffffff;
   text-decoration: none;
+}
+.nav-menu li a:hover{
+  color: #e25926;
+  transition: all 300ms ease;
 }
 
 .nav-btn1 {
@@ -211,6 +215,7 @@ textarea {
   padding: 10px 15px;
   border: 1px solid #dedede;
   background-color: #f7f7f5;
+  font-family: "Lato", sans-serif;
 }
 
 #email1 {
@@ -283,6 +288,7 @@ textarea {
 /* map section starts */
 .contact-map {
   margin-top: 10%;
+  height: 600px;
 }
 
 /* map section ends */
@@ -380,6 +386,11 @@ textarea {
 }
 
 /* footer ends */
+
+.merge{
+  display: flex;
+  flex-direction: column;
+}
 
 /* final footer starts  */
 .final-footer {
