--- a/allcss/home.css
+++ b/allcss/home.css
@@ -181,6 +181,7 @@
   flex-direction: column;
   justify-content: space-between;
   height: auto;
+  animation: scrollUpDown 1s;
 }
 
 .hero-top {
@@ -282,6 +283,13 @@
   font-size: 50px;
   color: #303084;
   font-weight: 600;
+  animation: scrollUpDown 1s;
+}
+
+@keyframes scrollUpDown {
+  0% {
+    transform: translatex(50px);
+  }
 }
 .aboutus-body {
   margin-top: 5%;
@@ -471,96 +479,56 @@
 /* diversify setting ends */
 
 /* testimonial carousel starts */
-/* .testislide {
-  width: 90%;
-  background-color: #e25926;
-  margin: 0 auto;
-  text-align: center;
-  color: #ffffff;
-  padding: 5% 0%;
-  position: relative;
-  top: 400px;
+
+#carouselExampleControls {
+  z-index: 999;
 }
 
-.testislide-content {
+#testi-quote {
+  font-size: 90px;
+  color: #ffffff;
+}
+
+#testi-text {
   font-size: 2.125rem;
   font-style: italic;
 }
 
-#testislide-quotation {
-  font-size: 70px;
-  margin: 1% 0%;
+#carousel-testimonail {
+  position: relative;
+  width: 90%;
+  overflow: hidden;
+  background-color: #e25926;
+  margin: 0px auto;
+  padding: 5% 0%;
 }
 
-.testislide-name {
+#carouselExampleControls {
+  top: 432px;
+}
+
+#name-id {
   font-family: "Neris semibold";
   font-size: 20px;
   font-weight: 400;
   letter-spacing: 1px;
   margin-top: 35px;
+  color: #ffffff;
 }
-.testislide-post {
+
+#post-id {
   font-family: "Lato", sans-serif;
   font-size: 15px;
+  color: #ffffff;
 }
 
-.testislide-slide {
-  position: relative;
-  overflow: hidden;
-  height: 300px;
+.carousel-control-prev {
+  left: 44px;
 }
 
-.slide {
-  position: absolute;
-  top: 10;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  transition: opacity 0.5s;
+.carousel-control-next {
+  right: 44px;
 }
-
-.slide.active {
-  opacity: 1;
-}
-
-.slide h2,
-.slide p {
-  margin: 0;
-}
-
-.bullet-container {
-  margin-top: 10px;
-}
-
-.bullet {
-  display: inline-block;
-  width: 10px;
-  height: 10px;
-  background-color: #ffffff;
-  border-radius: 50%;
-  margin: 0px 5px;
-  margin-top: 30px;
-  cursor: pointer;
-}
-
-.bullet.active {
-  background-color: #555;
-}
-
-.script-button {
-  padding: 8px 16px;
-  background-color: #3498db;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.prev-button:hover,
-.next-button:hover {
-  background-color: #2980b9;
-}  */
 
 /* testimonial carousel ends */
 
@@ -889,18 +857,30 @@
     justify-content: space-between;
     width: 100%;
   }
+
+  #testi-text {
+    font-size: 18px;
+  }
   .hero-text {
-    font-size: 40px;
+    font-size: 35px;
   }
   .hero-strong {
-    font-size: 40px;
+    font-size: 30px;
   }
   .hero-right-content {
     padding: 0px;
     width: 100% !important;
   }
+  .hero-insider {
+    padding: 30% 0%;
+  }
+
+  .w-100 {
+    height: 100vh !important;
+    width: auto !important;
+  }
   .hero-right-content .hero-coloured {
-    font-size: 50px;
+    font-size: 53px;
   }
   .hero {
     padding-top: 37%;
